# readsend

./: .gitignore  README.md  main.py  pyproject.toml
src/: daily_read.py  email_daily.py  ingest.py  migrate_kindle_source.py  migrate_to_namespace.py  parser.py  query_news.py
